--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,9 @@ android {
 
     defaultConfig {
         applicationId "com.idance.adminmanager"
-        minSdk 21
-        targetSdk 33
+        minSdk 24
+        //noinspection EditedTargetSdkVersion
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -22,8 +23,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable true
+//            minifyEnabled true
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -43,15 +45,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0-beta01'
-    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.4.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.4.1'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.3.0'
-    implementation 'com.google.firebase:firebase-perf-ktx:20.4.0'
+    implementation 'com.google.firebase:firebase-perf-ktx:20.4.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -62,5 +65,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.shrikanth7698:Collapsible-Calendar-View-Android:v1.0.3'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+
+    implementation files('D:/DTAKO PROJECTS/IDANCE_SDK/app/build/outputs/aar/IDance_SDK.aar')
+
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    implementation 'com.google.firebase:firebase-config-ktx:21.4.1'
+
+
 
 }
